@@ -853,6 +853,7 @@ To reduce overhead and storage requirements, you can set the sample rate to a va
 between `0.0` and `1.0`.
 We still record overall time and the result for unsampled transactions, but no
 context information, tags, or spans.
+Note that the sample rate will be rounded to 4 digits of precision.
 
 [float]
 [[config-use-experimental-sql-parser]]
